--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 20%;
   background-color: #FEFAE0;
+  margin-bottom: 2em;
   &__hamburger {
     color: #975721;
     display: none;
