--- a/src/components/ContactForm/styles.scss
+++ b/src/components/ContactForm/styles.scss
@@ -1,7 +1,26 @@
 .contactForm {
-  background-color: red;
+  background-color: #FEFAE0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  width: 50%;
+  margin: 0 auto;
+  height: 60vh;
+  &__message {
+    width: 80%;
+    height: 40%;
+    margin: 2em 0;
+    border: 2px solid #975721;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .contactForm__message {
+    width: 100%;
+  }
+
+  .test {
+    display: flex;
+    justify-content: center;
+  }
 }
