--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,2 +1,37 @@
-@import 'src/styles/reset';
 @import 'src/styles/vars';
+
+.footer {
+  width: 100%;
+  font-size:1.4em;
+  margin: $gutter auto;
+  font-weight: 700;
+  &__top{
+    display: flex;
+    justify-content: space-between;
+    margin: $gutter*2;
+  }
+  &__top:hover{
+    color: $lightest-brown;
+  }
+  &__list{
+    display: flex;
+    flex-direction: column;
+    text-align: center; 
+    margin: $gutter;
+  }
+  &__links{
+    margin: $gutter;
+  }
+  &__links:hover{
+    color: $lightest-brown;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .footer {
+    width: 80%;
+    &__list {
+      flex-direction: row;
+    }
+  }
+}
