--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -10,14 +10,20 @@
     justify-content: space-between;
     margin: $gutter*2;
   }
-  &__top:hover{
+  &__icon:hover{
     color: $lightest-brown;
+  }
+  &__icon--open{
+    transform: rotate(90deg);
   }
   &__list{
     display: flex;
     flex-direction: column;
     text-align: center; 
     margin: $gutter;
+  }
+  &__list--notActive{
+    display: none;
   }
   &__links{
     margin: $gutter;
@@ -27,11 +33,20 @@
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 650px) {
   .footer {
     width: 80%;
     &__list {
       flex-direction: row;
+    }
+    &__list--notActive{
+      display: block;
+    }
+    &__icon{
+      display:none;
+    }
+    &__top{
+      justify-content: center;
     }
   }
 }
