--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -5,6 +5,10 @@
   font-size:1.4em;
   margin: $gutter auto;
   font-weight: 700;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   &__top{
     display: flex;
     justify-content: space-between;
