--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/vars';
+
 .header {
   width: 100%;
   height: 20%;
@@ -25,9 +27,11 @@
     justify-content: center;
   }
   &__links {
-    margin: 2em;
+    margin: 1em 2em;
+    font-size:1.4em;
+    font-weight: 700;
     &:hover {
-      color: red;
+      color: $lightest-brown;
     }
   }
   // target la svg (hamburger)
