--- a/src/components/Product/styles.scss
+++ b/src/components/Product/styles.scss
@@ -13,8 +13,6 @@
   &__img {
     width: 100%;
     border-radius: 5px;
-
-    
   }
   &__bottom{
     display: flex;
@@ -45,14 +43,26 @@
     text-transform: uppercase;
     margin: $gutter;
     font-weight: 700;
-
   }
+
   &__icon{
     margin: $gutter 0;
     cursor: pointer;
   }
+  
   &__icon:hover{
     color: $lightest-brown;
+  }
+
+  &__add-to-cart-btn{
+    background-color: $light-brown;
+    color: $dark-brown;
+    font-weight: 700;
+    width: 100%;
+  }
+
+  &__add-to-cart-btn:hover{
+    background-color: $lightest-brown;
   }
 }
 
