--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -5,6 +5,7 @@
   height: 20%;
   background-color: #FEFAE0;
   margin-bottom: 2em;
+  position: relative;
   &__hamburger {
     color: #975721;
     display: none;
