--- a/src/components/LoginForm/styles.scss
+++ b/src/components/LoginForm/styles.scss
@@ -6,9 +6,35 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 50%;
   &__links {
     margin-bottom: 2em;
     font-family: $font-ubuntu;
     font-size: 1.2em;
+    align-self: center;
+  }
+  &__button {
+    align-self:center;
+  }
+  &__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2em;
+  }
+}
+
+
+@media screen and (max-width: 650px) {
+  .loginForm {
+    &__links {
+      width: 100%;
+      font-size: 1em;
+      white-space: nowrap;
+    }
+    &__button {
+      align-self: flex-start;
+    }
   }
 }
