--- a/src/components/SignupForm/SignupField/styles.scss
+++ b/src/components/SignupForm/SignupField/styles.scss
@@ -3,8 +3,8 @@
 .field {
   margin: .3em;
   position: relative;
-  &-input {
-    width: 100%;
+  &__input {
+    width: 50%;
     padding: .7em;
     font-size: 1em;
     border: none;
@@ -40,6 +40,18 @@
   }
 }
 
+#field {
+  &__first_name {
+    width: 30%;
+  }
+  &__last_name {
+    width: 30%;
+  }
+  &__phone_number {
+    width: 30%;
+  }
+}
+
 @keyframes labelSlideUpAndShow{
   0% {
     transform: translateY(1em);
@@ -48,5 +60,14 @@
   100% {
     transform: translateY(0em);
     opacity: 1;
+  }
+}
+
+
+@media screen and (max-width: 650px) {
+  .field {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
