--- a/src/components/Products/Product/styles.scss
+++ b/src/components/Products/Product/styles.scss
@@ -1,11 +1,13 @@
 @import 'src/styles/vars';
 
 .product {
-  width: 100%;
-  height: 25%;
+  width: 30%;
   margin: $gutter*2 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   &__name {
-    margin:$gutter;
+    margin: $gutter;
     text-align: center;
     font-weight: 700;
     text-transform: uppercase;
@@ -13,6 +15,7 @@
   &__img {
     width: 100%;
     border-radius: 5px;
+    height: auto;
   }
   &__bottom{
     display: flex;
@@ -66,9 +69,9 @@
   }
 }
 
-@media screen and (min-width: 650px) {
+@media screen and (max-width: 650px) {
   .product{
-    width:25%;
+    width:100%;
     font-size: 0.7rem;
     &__quantity-input {
       font-size: 0.6rem;
@@ -79,6 +82,11 @@
     }
     &__quantity{
       width: 50%;
+      display: flex;
+      align-items: center;
+      &-input {
+        height: 50%;
+      }
     }
   }
 }
