--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -1,6 +1,7 @@
 .contact {
   display: flex;
   flex-direction: row;
+  margin-bottom: 2em;
   &__title {
     text-align: center;
     font-size: 2em;
@@ -31,6 +32,7 @@
     zoom: 2;
     max-width: 100%;
     max-height: 100%;
+    border-radius: 20px;
   }
  .svg-inline--fa.fa-w-18 {
    width: 50px;
