--- a/src/components/ContactForm/ContactField/styles.scss
+++ b/src/components/ContactForm/ContactField/styles.scss
@@ -5,6 +5,7 @@ width: 70%;
 height: 4em;
 flex-direction: flex-start;
 justify-content: space-around;
+margin: 0;
 margin-bottom: 1em;
 color: #432818;
 font-weight: bold;
@@ -17,14 +18,19 @@ font-weight: bold;
 }
 &__label {
   margin-bottom: 0.5em;
+  font-weight: bold;
 }
 }
 
 @media screen and (max-width: 650px) {
   .field {
     width: 100%;
+    &__input {
+      width: 100%;
+    }
   }
   .button--ContactForm {
     margin: 0 auto;
   }
+  
 }
