--- a/src/components/ContactForm/styles.scss
+++ b/src/components/ContactForm/styles.scss
@@ -1,16 +1,18 @@
+@use 'src/styles/vars' as v;
+
 .contactForm {
-  background-color: #FEFAE0;
+  background-color: v.$dark-brown;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 50%;
   margin: 0 auto;
   height: 60vh;
+  color: v.$light-brown;
   &__message {
     width: 80%;
     height: 40%;
-    margin: 2em 0;
-    border: 2px solid #975721;
+    margin: 0 0 2em 0;
   }
 }
 
@@ -18,7 +20,6 @@
   .contactForm__message {
     width: 100%;
   }
-
   .test {
     display: flex;
     justify-content: center;
