--- a/src/components/ContactForm/styles.scss
+++ b/src/components/ContactForm/styles.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/vars' as v;
 
 .contactForm {
-  background-color: v.$dark-brown;
+  background-color: v.$normal-grey;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
