--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -3,13 +3,17 @@
 .header {
   width: 100%;
   height: 20%;
-  background-color: #FEFAE0;
+  // background-color: $lightest-brown;
+  background-image: url(https://images.unsplash.com/photo-1523294587484-bae6cc870010?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2064&q=80);
+  background-size: cover;
+  background-position-y: 25%;
   margin-bottom: 2em;
   position: relative;
   &__hamburger {
-    color: #975721;
+    color: $normal-grey;
     display: none;
     padding: 2em 0 0 2em;
+    text-shadow: $light-brown 2px 0 20px;;
     &--active {
       transform: rotate(90deg);
       margin-left: 2em;
@@ -31,8 +35,12 @@
     margin: 1em 2em;
     font-size:1.4em;
     font-weight: 700;
+    text-shadow: $light-brown 1px 0 10px;;
+    text-transform: uppercase;
+    text-align: center;
+    color: $dark-grey;
     &:hover {
-      color: $lightest-brown;
+      color: $normal-grey;
     }
   }
   // target la svg (hamburger)
