--- a/src/components/History/styles.scss
+++ b/src/components/History/styles.scss
@@ -10,6 +10,7 @@
     min-height: 300px;
     max-width: 650px;
     max-height: 400px;
+    border-radius: 8px;
   }
   &__content {
     align-self: center;
