--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 @import 'src/styles/vars';
 
 body {
-  background-color: $dark-brown;
+  background-color: $normal-grey;
   color:$light-brown;
   font-family: $font-ubuntu;
 }
