Add some colors choices

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,7 +1,7 @@
-$dark-grey: #ccd5ae;
-$normal-grey: #e9edc9;
-$normal-brown: #606c38;
-$light-brown: #d4a373;
-$lightest-brown: #faedcd;
+$dark-grey: #303a44;
+$normal-grey: #56666e;
+$normal-brown: #695b46;
+$light-brown: #a59172;
+$lightest-brown: #caccc9;
 $font-ubuntu: 'Ubuntu', sans-serif;
 $gutter: 1rem;
