--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/vars';
+
 .cart {
   display: flex;
   flex-wrap: wrap;
@@ -5,7 +7,19 @@
     margin: auto;
     
   }
+  &__bottom{
+    display: flex;
+    flex-direction:column;
+    width:100%;
+  }
+  &__price-total{
+    margin:$gutter*3;
+    font-size: 2rem;
+    text-align: center;
+  
+  }
  
+
 }
 
 @media screen and (max-width: 650px) {
