--- a/src/components/Admin/AdminProduct/styles.scss
+++ b/src/components/Admin/AdminProduct/styles.scss
@@ -11,6 +11,13 @@
     width: 30%;
     font-size: 1em;
     white-space: nowrap;
+    padding: 1em;
+    background-color:$light-brown;
+    font-size: 1em;
+    border-radius: 15px;
+    border: none;
+    color: $normal-grey;
+    font-weight: 700;
   }
   &__dropdown {
     border-radius: 20px;
@@ -40,4 +47,16 @@
     border-radius: 20px;
     margin-bottom: 3em;
   }
+}
+
+.react-responsive-modal-modal {
+width: 80%;
+border-radius: 20px;
+background-color: $dark-grey;
+}
+
+.modal__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
