--- a/src/components/Admin/AdminProduct/styles.scss
+++ b/src/components/Admin/AdminProduct/styles.scss
@@ -18,13 +18,31 @@
     border: none;
     color: $normal-grey;
     font-weight: 700;
+    max-width: 300px;
   }
-  &__dropdown {
+  &__dropdownProducts {
     border-radius: 20px;
     border: none;
     width: 20%;
     padding: 1.1em;
     text-align: center;
+    background-color: $light-brown;
+    color: $dark-grey;
+    font-size: 1em;
+    font-weight: 700;
+  }
+  &__dropdownCategories {
+    border: none;
+    width: 50%;
+    padding: 0.8em 0;
+    background-color: $light-brown;
+    color: $dark-grey;
+    font-size: 1em;
+    font-weight: 700;
+    text-align: center;
+    border-radius: 20px;
+    display: flex;
+    align-self: center;
   }
   &__addProductContainer {
     display: flex;
@@ -47,16 +65,45 @@
     border-radius: 20px;
     margin-bottom: 3em;
   }
+  &__dropdownContainer {
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+  }
+  &__field {
+    width: 70%;
+    border-radius: 20px;
+    border: none;
+    background-color: $normal-grey;
+    padding: 1em;
+    color: white;
+    font-weight: 700;
+  }
+  &__addProductButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__form {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+  &__inputsContainer {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+  }
+  &__button {
+    color: $dark-grey;
+    &:hover {
+      color: $normal-brown;
+    }
+  }
 }
 
+// modif css de la modal dans nodemodules react-modal style.css
 .react-responsive-modal-modal {
-width: 80%;
-border-radius: 20px;
-background-color: $dark-grey;
-}
-
-.modal__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 50vh; 
 }
