--- a/src/components/Account/styles.scss
+++ b/src/components/Account/styles.scss
@@ -5,11 +5,23 @@
   height: 20vh;
   display: flex;
   justify-content: center;
+  flex-direction:column;
   align-items: center;
   &__userInterface {
     display: flex;
     width: 80%;
     justify-content: space-between;
+  }
+  &__order-list {
+    margin:$gutter*2;
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  &__item{
+    display: flex;
+    font-size: 1rem;
+    justify-content: space-between;
+
   }
   &__info {
     display: flex;
