--- a/src/components/Admin/AdminProduct/styles.scss
+++ b/src/components/Admin/AdminProduct/styles.scss
@@ -19,6 +19,18 @@
     align-self: flex-end;
     justify-content: center;
   }
+  &__errorMessage {
+    margin-bottom: 1em;
+    background-color: red;
+    color: white;
+    width: 20%;
+    text-align: right;
+    border-radius: 20px;
+    padding: 1em;
+    display: flex;
+    align-self: flex-end;
+    justify-content: center;
+  }
   &__addProduct {
     width: 30%;
     font-size: 1em;
