--- a/src/components/Admin/AdminProduct/styles.scss
+++ b/src/components/Admin/AdminProduct/styles.scss
@@ -11,7 +11,7 @@
     margin-bottom: 1em;
     background-color: green;
     color: white;
-    width: 20%;
+    width: 40%;
     text-align: right;
     border-radius: 20px;
     padding: 1em;
@@ -23,7 +23,7 @@
     margin-bottom: 1em;
     background-color: red;
     color: white;
-    width: 20%;
+    width: 40%;
     text-align: right;
     border-radius: 20px;
     padding: 1em;
@@ -32,7 +32,7 @@
     justify-content: center;
   }
   &__addProduct {
-    width: 30%;
+    width: 50%;
     font-size: 1em;
     white-space: nowrap;
     padding: 1em;
@@ -130,4 +130,47 @@
 // modif css de la modal dans nodemodules react-modal style.css
 .react-responsive-modal-modal {
   height: 50vh; 
+}
+
+@media screen and (max-width: 650px) {
+  .adminProduct {
+    height: 50vh;
+    &__addProductContainer {
+      height: 50%;
+    }
+    &__modifyProductContainer {
+      flex-direction: column;
+      height: 50%;
+    }
+    &__dropdownProducts {
+      width: 90%;
+    }
+    &__addProduct {
+      width: 100%;
+    }
+    &__successMessage {
+      width: 100%;
+      text-align: center;
+    }
+    &__errorMessage {
+      width: 100%;
+      text-align: center;
+    }
+    &__form {
+      flex-direction: column;
+    }
+    &__inputsContainer {
+      width: 100%;
+      margin-bottom: 2em;
+    }
+    &__dropdownContainer {
+      width: 100%;
+      justify-content: flex-start;
+      align-items: center;
+    }
+    &__dropdownCategories {
+      margin-bottom: 2em;
+      align-self: flex-start
+    }
+  }
 }
