--- a/src/components/SingleProduct/styles.scss
+++ b/src/components/SingleProduct/styles.scss
@@ -26,6 +26,7 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    margin-bottom: 1em;
   }
   &__quantityContainer {
     display: flex;
