--- a/src/components/Admin/AdminProduct/DailyOrders/styles.scss
+++ b/src/components/Admin/AdminProduct/DailyOrders/styles.scss
@@ -8,6 +8,8 @@
   border-radius: 20px;
   border-radius: 0px 100px / 120px;
   border: 2px solid $light-brown;
+  height: max-content;
+  padding-bottom: 2em;
   &__title {
     color: $light-brown;
     font-size: 1.6em;
@@ -27,5 +29,84 @@
     background-color: $normal-grey;
     border-radius: 10px;
     margin-bottom: 1em;
+    display: flex;
+    padding: 1em 0;
+  }
+  &__productsContainer {
+    display:flex;
+    flex-direction: column;
+    width: 30%;
+    align-items: flex-end;
+    margin-left: 1em;
+  }
+  &__quantityContainer {
+    display: flex;
+    flex-direction: column;
+    width: 10%;
+  }
+  &__entityTitle {
+    text-align: center;
+    width: 100%;
+    padding-bottom: 1em;
+    
+    border-radius: 0 0 0 0px;
+  }
+  &__product {
+    
+    border-top: 2px solid $light-brown;
+    width: 100%;
+    text-align: end;
+    padding: 0.4em;
+    border-left: 2px solid $light-brown;
+    border-radius: 5px 0 0 5px;
+    &:last-child {
+      border-bottom: 2px solid $light-brown;
+    }
+  }
+  &__quantity {
+    border: 2px solid $light-brown;
+    border-bottom: 0;
+    text-align: center;
+    padding: 0.4em;
+    border-radius: 0px 5px 5px 0;
+    &:last-child {
+      border-bottom: 2px solid $light-brown;
+    }
+  }
+  &__statusContainer {
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  &__status {
+    text-align: center;
+    margin-bottom: 1em;
+  }
+  &__validateOrder {
+    width: 70%;
+    margin: 0 auto;
+    background-color: $lightest-brown;
+    border: 4px solid $light-brown;
+    color: $dark-grey;
+    font-size: 0.9em;
+    padding: 0.4em;
+    border-radius: 20px;
+    font-family: $font-ubuntu;
+    font-weight: 700;
+    margin-bottom: 1em;
+    &:hover {
+      background-color: $dark-grey;
+      color: white;
+    }
+  }
+  &__totalPrice {
+    background-color: $lightest-brown;
+    border-radius: 20px;
+    width: 20%;
+    font-size: 1.5em;
+    display: flex;
+    align-self: center;
+    justify-content: center;
   }
 }
