--- a/src/components/Admin/AdminProduct/DailyOrders/styles.scss
+++ b/src/components/Admin/AdminProduct/DailyOrders/styles.scss
@@ -48,11 +48,11 @@
     text-align: center;
     width: 100%;
     padding-bottom: 1em;
-    
+    cursor: default;
     border-radius: 0 0 0 0px;
   }
   &__product {
-    
+    cursor: default;
     border-top: 2px solid $light-brown;
     width: 100%;
     text-align: end;
@@ -64,6 +64,7 @@
     }
   }
   &__quantity {
+    cursor: default;
     border: 2px solid $light-brown;
     border-bottom: 0;
     text-align: center;
@@ -81,7 +82,15 @@
   }
   &__status {
     text-align: center;
-    margin-bottom: 1em;
+    background-color: $status-save;
+    width: 50%;
+    margin: 0 auto 1em auto;
+    border-radius: 20px;
+    padding: 0.6em;
+    color: $dark-grey;
+    text-align: center;
+    font-weight: 700;
+    cursor: default;
   }
   &__validateOrder {
     width: 70%;
@@ -101,12 +110,14 @@
     }
   }
   &__totalPrice {
-    background-color: $lightest-brown;
+    background-color: $dark-grey;
     border-radius: 20px;
     width: 20%;
     font-size: 1.5em;
+    padding: 0.5em;
     display: flex;
     align-self: center;
     justify-content: center;
+    cursor: default;
   }
 }
