--- a/src/components/Admin/AdminProduct/DailyOrders/styles.scss
+++ b/src/components/Admin/AdminProduct/DailyOrders/styles.scss
@@ -116,9 +116,11 @@
     font-family: $font-ubuntu;
     font-weight: 700;
     margin-bottom: 1em;
+    transition: 0.3s background-color;
     &:hover {
       background-color: $dark-grey;
       color: white;
+      transition-delay: 0.2s;
     }
   }
   &__totalPrice {
