styling connection button

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -10,7 +10,7 @@
   margin-bottom: 2em;
   position: relative;
   &__hamburger {
-    color: $normal-grey;
+    color: $dark-grey;
     display: none;
     padding: 2em 0 0 2em;
     text-shadow: $light-brown 2px 0 20px;;
