--- a/src/components/Connection/styles.scss
+++ b/src/components/Connection/styles.scss
@@ -4,7 +4,7 @@
   color: $lightest-brown;
   position: absolute;
   font-weight: 700;
-  top: -10px;
+  top: 0px;
   right: -15px;
   margin:$gutter ;
   &__icon{
@@ -84,6 +84,7 @@
     margin: $gutter*2;
     &__group-icon {
       padding: 0.5em;
+      padding-bottom: 0;
     }
     &__hello {
       font-size: 1.5rem;
