tiny media queries on admin

--- a/src/components/Admin/AdminProduct/DailyOrders/styles.scss
+++ b/src/components/Admin/AdminProduct/DailyOrders/styles.scss
@@ -135,3 +135,14 @@
     cursor: default;
   }
 }
+
+@media screen and (max-width: 770px) {
+  .dailyOrders {
+    &__statusCheckedIn {
+      padding: 0;
+    }
+    &__statusValid {
+      padding: 0;
+    }
+  }
+}
