--- a/src/components/Products/Product/styles.scss
+++ b/src/components/Products/Product/styles.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border-radius: 20px;
   &__name {
     margin: $gutter;
     text-align: center;
@@ -61,7 +62,8 @@
     background-color: $light-brown;
     color: $normal-grey;
     font-weight: 700;
-    width: 100%;
+    max-width: 80%;
+    margin: 0 auto;
   }
 
   &__add-to-cart-btn:hover{
@@ -87,6 +89,9 @@
       &-input {
         height: 50%;
       }
+    }
+    &__add-to-cart-btn{
+      max-width: 100%;
     }
   }
 }
