--- a/src/components/Connection/styles.scss
+++ b/src/components/Connection/styles.scss
@@ -66,6 +66,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
   }
   &__logout-link {
     width: 33%;
@@ -76,6 +77,22 @@
     width: 33%;
     display: flex;
     justify-content: center;
+  }
+  &__cart-items{
+    position: absolute;
+    top: 30px;
+    width: 20px;
+    height: 20px;
+    left: 10px;
+    padding: 0.1em;
+    border-radius: 50%;
+    border: 2px solid black;
+    background-color: $dark-grey;
+    font-size: 0.8em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.8;
   }
 }
 
@@ -113,7 +130,11 @@
     &__admin-btn{
       margin-top: 0;
       font-size: 1.5rem;
-     }
+    }
+    &__cart-items {
+      top: 15px;
+      left: 13px;
+    }
   }
   
 }
