--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -1,7 +1,13 @@
+@import 'src/styles/vars';
+
 .contact {
   display: flex;
   flex-direction: row;
   margin-bottom: 2em;
+  background-color: $dark-grey;
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 20px;
   &__title {
     text-align: center;
     font-size: 2em;
@@ -25,7 +31,7 @@
     width:50%;
     justify-content: space-between;
     flex-direction: column;
-    margin-bottom: 2em;
+    padding: 2em;
   }
   &__image {
     width: 100%;
