--- a/src/components/Products/Product/styles.scss
+++ b/src/components/Products/Product/styles.scss
@@ -7,6 +7,8 @@
   flex-direction: column;
   justify-content: space-between;
   border-radius: 20px;
+  max-height: 500px;
+  max-width: 500px;
   &__name {
     margin: $gutter;
     text-align: center;
@@ -17,6 +19,25 @@
     width: 100%;
     border-radius: 5px;
     height: auto;
+    object-fit: contain;
+  }
+  &__link{
+    position: relative;
+  }
+  &__label {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    margin: 1em;
+    background-color: $light-brown;
+    padding: 1em;
+    border-radius: 20px;
+    color: $dark-grey;
+    font-family: $font-ubuntu;
+    font-weight: 700;
+    &--modifier {
+      display: none;
+    }
   }
   &__bottom{
     display: flex;
