--- a/src/components/Account/styles.scss
+++ b/src/components/Account/styles.scss
@@ -105,8 +105,8 @@
     margin-bottom: 1em;
   }
   &__item {
-    margin: 1em 0;
-    padding: 0 1em;
+    margin: 1em;
+    padding: 1em;
   }
   &__order-container {
     display: flex;
