--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -18,7 +18,22 @@
     text-align: center;
   
   }
- 
+  &__label-receptionDate{
+    margin:$gutter*3;
+    font-size: 1.3rem;
+    text-align: center;
+  }
+  &__input-receptionDate{
+    margin:$gutter;
+    border: none;
+    border-radius: .3rem;
+    height: 2.5rem;
+    background-color: $light-brown;
+    color: $normal-grey;
+    font-size:1.3rem;
+    font-weight:bold;
+    padding: .5rem
+  }
 
 }
 
