--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -10,7 +10,7 @@
   border-radius: 20px;
   &__title {
     text-align: center;
-    font-size: 2em;
+    font-size: 1.5em;
     margin-bottom: 1.3em;
   }
   &__links {
@@ -25,6 +25,17 @@
   }
   &__info {
     margin-bottom: 1em;
+    font-size: 1.2em;
+    &--modifier {
+      font-size: 2em;
+      font-weight: 700;
+    }
+  }
+  &__arrow {
+    width: 100px;
+    position: absolute;
+    right: 10px;
+    top: 70px;
   }
   &__section {
     display: flex;
@@ -32,6 +43,9 @@
     justify-content: space-between;
     flex-direction: column;
     padding: 2em;
+    &--modifier {
+      position: relative;
+    }
   }
   &__image {
     width: 100%;
@@ -54,11 +68,22 @@
  }
 }
 
+@media screen and (max-width: 1250px) {
+  .contact {
+    &__arrow {
+      width: 50px;
+      right: -20px;
+    }
+  }
+}
 @media screen and (max-width: 650px) {
   .contact {
     flex-direction: column;
     &__section {
       width: 100%;
+    }
+    &__arrow {
+      display: none;
     }
   }
 }
