--- a/src/components/PageNotFound/styles.scss
+++ b/src/components/PageNotFound/styles.scss
@@ -1,11 +1,14 @@
 .PageNotFound {
-  margin: 13%;
   text-align: center;
   font-size: xx-large;
+  height: 50vh;
 }
 
 @media screen and (max-width: 650px) {
   .PageNotFound {
-    margin: 40%;
+    height: 70vh;
+    width: 100%;
+    text-align: center;
+    padding-top: 1em;
   }
 }
