fix style adminPage

--- a/src/components/Admin/AdminProduct/DailyOrders/styles.scss
+++ b/src/components/Admin/AdminProduct/DailyOrders/styles.scss
@@ -138,7 +138,7 @@
   &__commandId{
     position: absolute;
     top: 150px;
-    left: 20px;
+    right: 180px;
     font-size: 1.2em;
     font-weight: 700;
   }
