--- a/src/components/Connection/styles.scss
+++ b/src/components/Connection/styles.scss
@@ -16,18 +16,17 @@
   }
   &__group-icon{
   display: flex;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   background-color: $normal-grey;
   border-radius: 20px;
-  border: 2px solid $dark-grey;
-  justify-content: space-between;
+  justify-content: space-around;
   }
   &__hello {
     text-align: center;
     font-size: 0.8rem;
     margin-bottom: 1em;
     cursor: default;
-    padding: 0.3em;
+    padding: 0.5em;
     background-color: $normal-grey;
     border-radius: 20px;
   }
@@ -36,13 +35,13 @@
    padding-left: 1em;
  }
  &__edit-btn{
-  margin: $gutter 0;
+  margin: $gutter*0.5 0;
  }
  &__edit-btn:hover {
   color:$dark-grey
   }
  &__admin-btn{
-  margin: $gutter;
+  margin: $gutter*0.5;
  }
  &__admin-btn:hover {
   color:$dark-grey
@@ -55,7 +54,7 @@
   color:$dark-grey
 }
  &__logout-btn{
-  margin: $gutter 0.5em;
+  margin: $gutter*0.5;
 
  }
  &__logout-btn:hover {
@@ -86,7 +85,6 @@
     left: 10px;
     padding: 0.1em;
     border-radius: 50%;
-    border: 2px solid black;
     background-color: $dark-grey;
     font-size: 0.8em;
     display: flex;
@@ -106,6 +104,8 @@
     &__hello {
       font-size: 1.5rem;
       text-shadow: center;
+      padding: 0.7em;
+
     }
     &__logged {
       display: flex;
