Modify scss for homepage, contact page, footer

--- a/src/components/History/styles.scss
+++ b/src/components/History/styles.scss
@@ -14,9 +14,10 @@
   }
   &__content {
     align-self: center;
+    text-align: justify;
     line-height: 2;
     font-size: 1.2em;
-    padding: 1em;
+    padding: 1.5em;
     max-width: 50%;
   }
 }
