--- a/src/components/Categories/styles.scss
+++ b/src/components/Categories/styles.scss
@@ -1,11 +1,31 @@
+@import 'src/styles/vars';
+
 .categories {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-bottom: 2em;
+  margin: $gutter*2 0;
+  &__title{
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    text-align: center;
+    padding-bottom: $gutter*2;
+    font-weight: bold;
+  }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (min-width: 650px) {
 .categories {
   flex-direction: column;
+  &__title{
+    font-size: 2rem;
+    padding:3rem;
+  
+  }
+  &__items{
+  display: flex;
+
+  }
+
 }
 }
