--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -4,6 +4,8 @@
   width: 100%;
   font-size:1.4em;
   margin: $gutter auto;
+  margin-bottom: 0;
+  padding-bottom: $gutter;
   font-weight: 700;
   bottom: 0;
   left: 0;
