--- a/src/components/Categories/Category/styles.scss
+++ b/src/components/Categories/Category/styles.scss
@@ -7,6 +7,7 @@
   &__img {
   max-width: 100%;
   margin-bottom: 1em;
+  height: 100%;
   // background: linear-gradient(0deg, #00000088 30%, #FFFFFF44 100%);
   }
   &__title {
