--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -85,5 +85,14 @@
     &__arrow {
       display: none;
     }
+    &__title {
+      font-size: 1.2em;
+    }
+    &__info {
+      
+      &--modifier {
+        font-size: 1.5em;
+      }
+    }
   }
 }
