--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -27,6 +27,10 @@
     
 
   }
+  &__content{
+    font-size: 0.5rem;
+    padding-top: 0.5rem;
+  }
   &__list{
     display: flex;
     flex-direction: column;
@@ -39,6 +43,8 @@
   &__links{
     margin: $gutter;
     cursor: pointer;
+    font-size: 1rem;
+    text-transform: uppercase;
   }
   &__links:hover{
     color: $lightest-brown;
@@ -50,6 +56,7 @@
     width: 80%;
     &__list {
       flex-direction: row;
+      justify-content: space-around;
     }
     &__list--notActive{
       display: block;
@@ -59,6 +66,9 @@
     }
     &__top{
       justify-content: center;
+    }
+    &__content{
+      font-size: 1rem;
     }
   }
 }
