--- a/src/components/LegalMentions/styles.scss
+++ b/src/components/LegalMentions/styles.scss
@@ -1,21 +1,52 @@
-.Container {
-  margin: 0% 15% 0% 15%;
-  height: 66vh;
-}
+@import 'src/styles/vars';
 
-.LegalMentionsTitle {
-  text-align: center;
-  font-size: large;
-  padding: 20px;
-}
+.legal_mentions {
+  display: flex;
+  flex-direction:column;
+  width:90%;
+  margin: 0 auto;
+  height:66vh;
 
-.LegalMentionsMainTitle {
-  text-align: center;
-  font-size: xx-large;
-  padding: 20px;
-}
-
-@media screen and (max-width: 650px) {
-  .LegalMentions {
+  &__title {
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
   }
+  
+  &__subtitle {
+    font-size: 1rem;
+    text-align: left;
+    font-size: .8rem;
+    padding: $gutter;
+  }
+
+  &__content{
+    text-align: justify;
+  }
+}
+
+
+
+@media screen and (min-width: 650px) {
+  .legal_mentions {
+    width:70%;
+    &__title {
+      font-size: 2rem;
+      padding: 2rem;
+      text-transform: uppercase;
+      font-weight: bold;
+
+    }
+    
+    &__subtitle {
+      text-align: left;
+      font-size: 1rem;
+      padding:$gutter*1.2;
+      font-weight: bold;
+
+    }
+  }
+  
 }
