--- a/src/components/Dev/styles.scss
+++ b/src/components/Dev/styles.scss
@@ -2,17 +2,19 @@
 
 .dev {
   height: auto;
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   border-radius: 20px;
   justify-content: space-between;
+  height:66vh;
+
   &__section {
     background-color: $dark-grey;
     width: 33%;
     min-width: 200px;
     flex-wrap: wrap;
-    height: 100%;
+    height: 60%;
     padding: 1em;
     margin: 1em;
     border-radius: 30px;
@@ -24,7 +26,6 @@
     border-radius: 20px;
   }
   &__name {
-    height: 20%;
     margin-top: 1em;
     text-align: center;
     font-size: 1.2em;
@@ -47,6 +48,7 @@
 
 @media screen and (max-width: 650px) {
   .dev {
+    height:100%;
     &__section {
       width: 100%;
     }
