--- a/src/components/ContactForm/styles.scss
+++ b/src/components/ContactForm/styles.scss
@@ -30,6 +30,7 @@
 @media screen and (max-width: 650px) {
   .contactForm {
     margin-top: 4em;
+    width: 90%;
     &__message {
       width: 100%;
     }
