--- a/src/components/Account/styles.scss
+++ b/src/components/Account/styles.scss
@@ -29,13 +29,14 @@
     padding:$gutter*4 $gutter*5;
     border: 2px solid $light-brown;
     border-radius: 0px 100px / 120px;
-    height:80%
+    height:80%;
   }
   &__item{
     display: flex;
     flex-direction: column;
     font-size: 1rem;
     justify-content: space-between;
+    margin: 1em;
 
   }
   &__info {
@@ -110,10 +111,10 @@
     padding: 0;
     margin: $gutter 0;
     width: 100%;
-    height: 100vh;
+    max-height: max-content;
     border-radius: 10px;
     width: 90%;
-    border-radius: 0px 100px / 120px;
+    border-radius: 0px 100px / 0px;
 
   }
   &__order-title {
@@ -121,9 +122,6 @@
     width: 100%;
     text-align: center;
     margin: 1em 0;
-  }
-  &__item {
-    padding: 1em;
   }
   &__order-container {
     display: flex;
