--- a/src/components/SingleProduct/styles.scss
+++ b/src/components/SingleProduct/styles.scss
@@ -13,6 +13,11 @@
     font-size: 1.2rem;
 
   }
+  &__stock {
+    background-color: #386641;
+    padding: 1em;
+    border-radius: 20px;
+  }
   &__rightContainer {
     width: 50%;
     display: flex;
