--- a/src/components/ContactForm/styles.scss
+++ b/src/components/ContactForm/styles.scss
@@ -5,11 +5,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 50%;
+  width: 80%;
   margin: 0 auto;
   height: 66vh;
   color: v.$light-brown;
   position: relative;
+  border-radius: 20px;
+  padding: 1em;
   &__success {
   position: absolute;
   background-color: v.$dark-grey;
