--- a/src/components/Slogan/styles.scss
+++ b/src/components/Slogan/styles.scss
@@ -1,14 +1,17 @@
+@import 'src/styles/vars';
+
 .slogan {
   font-size: 1.5em;
   font-weight:bold;
   text-align: center;
   margin: 1.5em;
+  background-color: $dark-grey;
 }
 
 @media screen and (min-width: 650px) {
   .slogan {
     font-size: 2.2em;
-    margin-top: 2em ;
-    margin-bottom: 2em;
+    margin-top: 4em;
+    margin-bottom: 1.5em;
   }
 }
