--- a/src/components/Account/styles.scss
+++ b/src/components/Account/styles.scss
@@ -24,6 +24,7 @@
   }
   &__order-list {
     margin:$gutter*2;
+    margin-right: 4rem;
     font-size: 2rem;
     font-weight: bold;
     padding:$gutter*4 $gutter*5;
