--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -46,7 +46,7 @@
     margin: 1em 2em;
     padding: 0.5em;
     font-size:1.1em;
-    margin: 0 0.3em;
+    margin: 0.6em 0.3em;
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
