--- a/src/components/ContactForm/styles.scss
+++ b/src/components/ContactForm/styles.scss
@@ -33,8 +33,10 @@
   .contactForm {
     margin-top: 4em;
     width: 90%;
+    height: max-content;
     &__message {
       width: 100%;
+      min-height: 90px;
     }
     &__success {
       min-width: 210px;
