--- a/src/components/Admin/AdminProduct/styles.scss
+++ b/src/components/Admin/AdminProduct/styles.scss
@@ -103,6 +103,9 @@
     padding: 1em;
     color: white;
     font-weight: 700;
+    &--modifier {
+      min-height: 330px;
+    }
   }
   &__addProductButton {
     display: flex;
