--- a/src/components/SingleProduct/styles.scss
+++ b/src/components/SingleProduct/styles.scss
@@ -4,6 +4,7 @@
   background-color: $normal-grey;
   height: 55vh;
   display: flex;
+  border-radius: 20px;
   &__leftContainer {
     width: 50%;
     display: flex;
@@ -89,6 +90,7 @@
   .singleProduct {
     flex-direction: column;
     height: 75vh;
+    justify-content: space-between;
     &__leftContainer {
       width: 100%;
       height: 50%;
@@ -104,7 +106,7 @@
     &__image {
       width: 100%;
       height: 100%;
-      margin-bottom: 1em;
+      
     }
     &__button  {
       width: 40%;
