--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -85,6 +85,8 @@
 
 @media screen and (max-width: 800px) {
   .header {
+    border-radius: 0 0 10px 10px;
+
     &__logo {
       width: 30%;
       margin-top: -4.4em;
