--- a/src/components/SingleProduct/styles.scss
+++ b/src/components/SingleProduct/styles.scss
@@ -81,8 +81,9 @@
   margin-left: 1em;
   height: 70%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 
