--- a/src/components/SingleProduct/styles.scss
+++ b/src/components/SingleProduct/styles.scss
@@ -107,11 +107,12 @@
     margin-left: 1em;
     height: 70%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     align-items: flex-start;
     font-size: 1.2em;
+    padding:$gutter*3 0;
   }
   &__addIcon {
     background-color: red;
