--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -34,12 +34,33 @@
     font-weight:bold;
     padding: .5rem
   }
+  &__empty{
+    height: 50vh;
+  }
+  &__title-empty {
+    font-size: 3em;
+    width: 100%;
+    font-weight: 500;
+    text-align: center;
+  }
+  &__link-products {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    
+  }
+  &__button-products {
+    margin-top: 2em;
+    color: $dark-grey;
+  }
 
 }
 
 @media screen and (max-width: 650px) {
   .cart  {
     flex-direction: column;
-    
+    &__title-empty {
+      font-size: 2em;
+    }
   }
 }
