styling different part

--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -6,7 +6,7 @@
   font-size: 1em;
   border-radius: 15px;
   border: none;
-  color: $normal-grey;
+  color: $dark-grey;
   font-weight: 700;
 }
 .button:hover{
