--- a/src/components/SingleProduct/styles.scss
+++ b/src/components/SingleProduct/styles.scss
@@ -53,7 +53,7 @@
     width: 60%;
     border: none;
     background-color:$light-brown;
-    color:$normal-grey;
+    color:$dark-grey;
     text-align: center;
     border-radius: 20px;
     height: 100%;
@@ -76,7 +76,7 @@
     text-align: center;
     font-weight: 700;
     background-color: $light-brown;
-    color: $normal-grey;
+    color: $dark-grey;
     border-radius: 20px;
     font-size: 1.2em;
     font-family: $font-ubuntu;
