--- a/src/components/Account/styles.scss
+++ b/src/components/Account/styles.scss
@@ -90,7 +90,7 @@
   &__userInterface {
     flex-direction: column;
     justify-content: space-around;
-    padding-top: 15rem;
+    padding-top: 5em;
     width: 100%;
     height: 100%;
   }
