--- a/src/components/SingleProduct/styles.scss
+++ b/src/components/SingleProduct/styles.scss
@@ -125,7 +125,7 @@
 @media screen and (max-width: 800px) {
   .singleProduct {
     flex-direction: column;
-    height: 75vh;
+    height: 100%;
     justify-content: space-between;
     &__AddIcon {
       width: 30px !important;
@@ -168,6 +168,7 @@
       width: 30%;
       height: 100%;
       font-size: 2em;
+      padding: 0.5em;
     }
     &__quantity {
       font-size: 2em;
