border-radius account

--- a/src/components/Account/styles.scss
+++ b/src/components/Account/styles.scss
@@ -8,6 +8,7 @@
   align-items: center;
   overflow-y: auto;
   overflow-x: hidden;
+  border-radius: 20px;
   
   &__userInterface {
     display: flex;
