--- a/src/components/Admin/AdminProduct/DailyOrders/styles.scss
+++ b/src/components/Admin/AdminProduct/DailyOrders/styles.scss
@@ -127,20 +127,28 @@
   &__totalPrice {
     background-color: $dark-grey;
     border-radius: 20px;
-    width: 20%;
+    width: 80%;
     font-size: 1.5em;
     padding: 0.5em;
     display: flex;
     align-self: center;
     justify-content: center;
     cursor: default;
+    margin-bottom: 1em;
   }
   &__commandId{
-    position: absolute;
-    top: 150px;
-    right: 180px;
     font-size: 1.2em;
     font-weight: 700;
+    height: 20%;
+    width: 100%;
+    text-align: center;
+  }
+  &__infosContainer {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
