fix admin styles

--- a/src/components/Admin/AdminProduct/InputModifyProduct/styles.scss
+++ b/src/components/Admin/AdminProduct/InputModifyProduct/styles.scss
@@ -6,8 +6,10 @@
   width: 100%;
   margin-bottom: 2em;
   &__label {
+    width: 100%;
     font-weight: 700;
     margin-bottom: 1em;
+    padding-left: 1em;
   }
 }
 
