--- a/src/components/Admin/AdminProduct/styles.scss
+++ b/src/components/Admin/AdminProduct/styles.scss
@@ -92,7 +92,7 @@
   &__dropdownContainer {
     width: 50%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: column;
   }
   &__field {
@@ -105,6 +105,7 @@
     font-weight: 700;
     &--modifier {
       min-height: 330px;
+      margin-bottom: 2em;
     }
   }
   &__addProductButton {
